kubernates with ingress controller/files of deploy application using ingress/chatappbackend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels: 
     app: app1
spec:
  replicas: 2
  selector:
     matchLabels:
         app: app1
  template:
    metadata:
      labels:
         app: app1
    spec:
     containers:
     - name: app1
       image: akashdockerkhandare/chatapp:4.0
       ports:
       - containerPort: 8000
