kubernates with ingress controller/files of deploy application using ingress/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: db
   labels:
     app: db
spec:
   replicas: 1
   selector:
     matchLabels:
       app: db
   template:
     metadata:
        labels:
           app: db
     spec:
       containers:
       - name: db
         image: mysql:5.7
         ports:
         - containerPort: 3306
