kubernates with ingress controller/files of deploy application using ingress/db-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: db-service
spec:
 ports:
 - port: 3306
   protocol: TCP
   targetPort: 3306
 selector:
    app: db
 type: ClusterIP
