kubernates with ingress controller/files of deploy application using ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: "app-ingress"
  namespace: "application"
  labels: 
    app: app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernets.io/target-type: instance
spec:
  ingressClassName: alb
  rules:
    - host: vishalchatapp.ml
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: "backendapp"
               port: 
                 number: 8000
